# poker-arena

./: .gitignore  README.md
docs/: agent-controlplane-smoke-test.md  code-audit-2026-02-16.md  production-readiness-gap.md  prototype-spec.md
infra/: docker-compose.yml
schemas/: agent-protocol-v1.json
services/engine/: Cargo.toml  README.md  go.mod
services/engine/cmd/controlplane/: main.go  main_test.go  provider_factory.go  provider_factory_test.go
services/engine/cmd/engine/: main.go  main_test.go  providers.go  providers_test.go  run_report.go  run_report_test.go
services/engine/internal/agentclient/: client.go  client_test.go  provider.go  provider_test.go
services/engine/internal/api/: server.go  server_agent_integration_test.go  server_test.go
services/engine/internal/domain/: domain.go  domain_test.go
services/engine/internal/persistence/: migrate.go  postgres_repository.go  postgres_repository_test.go  repository.go  repository_contract_test.go  repository_resources_contract_test.go  repository_test.go
services/engine/internal/persistence/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_resources.down.sql  0002_resources.up.sql
services/engine/internal/rules/: dealer.go  dealer_test.go  evaluator.go  evaluator_test.go  payout.go  payout_test.go  rules.go
services/engine/internal/statemachine/: state_machine.go  state_machine_test.go
services/engine/internal/tablerunner/: runner.go  runner_test.go
services/engine/src/: agent_client.rs  api.rs  domain.rs  lib.rs  main.rs  persistence.rs  rules.rs  state_machine.rs  table_runner.rs
(+44 files in other folders)
